[gd_scene load_steps=4 format=3 uid="uid://c3kdu44jehf85"]

[ext_resource type="Texture2D" uid="uid://qn173bqpjgpd" path="res://Assets/art/IGG_Gromm.png" id="1_iljvx"]
[ext_resource type="Script" uid="uid://2xmwl085amvl" path="res://Scenes/Menus/character_selection.gd" id="1_ltbvc"]
[ext_resource type="PackedScene" uid="uid://cytim5vyarwgy" path="res://Scenes/GUI/Misc/basic_button.tscn" id="3_w07ih"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltbvc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(320, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -33.0
offset_right = 160.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_iljvx")

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Select"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_iljvx")

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Select"

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
texture = ExtResource("1_iljvx")

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Select"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 10.0
offset_right = 45.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "Select
Your
Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -40.0
offset_right = 45.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button" parent="Panel2" instance=ExtResource("3_w07ih")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="click_end" from="Panel2/Button" to="." method="_on_button_click_end"]
